--- a/styles/styles.css
+++ b/styles/styles.css
@@ -382,6 +382,14 @@ header#nav {
     font-size: 1.5rem;
     color: var(--color-burger);
 
+    label {
+      /* Add some padding to make it easier to click on touch devices */
+      padding: 0.3rem;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
     .burger-menu-close {
       display: none;
     }
