--- a/styles/styles.css
+++ b/styles/styles.css
@@ -463,9 +463,13 @@ section#hero {
     }
   }
 
-  .discover-more {
+  .discover-more-container {
     display: flex;
     justify-content: center;
+  }
+
+  .discover-more {
+    display: flex;
     align-items: center;
     color: var(--color-paragraph);
     font-size: var(--fs-body-s);
@@ -1117,7 +1121,7 @@ section#reviews {
     .dlbuttons {
       margin-top: 3rem;
     }
-    .discover-more {
+    .discover-more-container {
       justify-content: left;
     }
     .paragraph-splitter, .hero-images {
