--- a/styles/styles.css
+++ b/styles/styles.css
@@ -519,7 +519,7 @@ section#hero {
 .features-container {
   display: grid;
   grid-template-columns: 1fr;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 
   h2, h3 {
     color: var(--color-heading);
@@ -560,10 +560,11 @@ section#hero {
   .headline {
     margin-top: 2.5rem;
     font-size: var(--fs-h3);
+    line-height: 1.3;
   }
 
   .paragraph {
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     font-size: var(--fs-body-l);
     line-height: 1.6;
     color: var(--color-paragraph);
@@ -1131,15 +1132,23 @@ section#reviews {
 
     /* Features section */
   .features-container {
-    margin-bottom: 4rem;
+    padding-inline: 1.5rem;
+    margin-bottom: 7rem;
     .brandlogo-container {
       display: flex;
     }
 
+    .headline {
+      margin-top: 4rem;
+      font-size: var(--fs-h2);
+      line-height: 1.3;
+    }
+
     .feature-cards {
+      margin-top: 2.5rem;
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 2rem;
+      gap: 2.5rem 2rem;
       
       .card {
         margin-bottom: 0;
@@ -1263,14 +1272,14 @@ section#reviews {
   }
 
   /* Header/navbar */
-header#nav {
-  backdrop-filter: unset !important;
-  background-color: unset !important;
-  .burger-menu {
-    grid-template-rows: 0fr !important;
-    box-shadow: unset !important;
+  header#nav {
+    backdrop-filter: unset !important;
+    background-color: unset !important;
+    .burger-menu {
+      grid-template-rows: 0fr !important;
+      box-shadow: unset !important;
+    }
   }
-}
 
   .main-navbar {
     #navbar-links, .btn-signin {
@@ -1339,7 +1348,6 @@ header#nav {
       display: grid;
       grid-template-columns: 1fr 2fr;
       margin-top: 7rem;
-      margin-bottom: 7rem;
       gap: 8rem;
 
       .headline {
@@ -1352,10 +1360,12 @@ header#nav {
 
 
     .brandlogo-container {
+      margin-top: 6rem;
       .desktop-only {
         display: flex;
       }
     }
+
     .left-content {
       display: block;
       position: relative;
@@ -1367,6 +1377,23 @@ header#nav {
         position: absolute;
         top: 90px;
         left: 25px;
+      }
+    }
+
+    .right-content {
+      grid-template-rows: min-content min-content auto;
+      .headline, .paragraph {
+        text-align: left;
+      }
+      .headline {
+        font-size: var(--fs-h1);
+        line-height: 1.3;
+      }
+      .paragraph {
+        margin-top: .75rem;
+      }
+      .feature-cards {
+        margin-top: 4.5rem;
       }
     }
   }
