--- a/styles/styles.css
+++ b/styles/styles.css
@@ -633,12 +633,12 @@ section#how {
 
   h2 {
     font-size: 1.75rem;
-    margin-top: 4.5rem;
+    margin-top: 4rem;
   }
 
   .images-container {
     display: flex;
-    margin-top: 2.5rem;
+    margin-top: 2rem;
 
     img {
       max-width: 100%;
@@ -646,10 +646,13 @@ section#how {
   }
 
   .image-description {
+    margin-top: 1.5rem;
+
     h3 {
       display: inline-block;
       font-size: 1.375rem;
-      margin-top: 2.5rem;
+      font-weight: var(--fw-extra);
+      line-height: 1.4;
       width: 85%;
     }
     p {
@@ -1170,6 +1173,7 @@ section#reviews {
     }
 
     .images-container {
+      margin-top: 3rem;
       /* Increase spacing between images as container grows in width */
       width: 100%;
       max-width: 900px;
@@ -1190,6 +1194,7 @@ section#reviews {
     }
 
     .image-description {
+      margin-top: 2.5rem;
       width: 65%;
       max-width: 550px;
       h3 {
@@ -1392,6 +1397,7 @@ section#reviews {
       .paragraph {
         margin-top: .75rem;
       }
+      
       .feature-cards {
         margin-top: 4.5rem;
       }
@@ -1401,6 +1407,7 @@ section#reviews {
   /* How does it work-section */
   .how-container {
     h2 {
+      margin-top: 5rem;
       font-size: var(--fs-h1);
       line-height: 1.3;
     }
@@ -1436,6 +1443,7 @@ section#reviews {
         line-height: 1.4;  
       }
       p {
+        margin-bottom: 6rem;
         line-height: 1.625;
       }
     }
