Update faq-contact section margins and media queries

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -871,18 +871,20 @@ section#reviews {
     
   .faq-accordion {
     --_faq-border: 1px solid var(--color-faqoutline);
-    margin-top: 3rem;
+    margin-top: 3.5rem;
     border: var(--_faq-border);
     border-radius: 8px;
 
     details {
       background-color: var(--color-faqbg);
       border-bottom: var(--_faq-border);
+
       /* No border on last details-element to prevent double border*/
       &:last-child {
         border-bottom: unset;
       }
       &[open] {
+        padding-bottom: 1rem;
         .answer {
           border-top: var(--_faq-border);
         }
@@ -897,7 +899,7 @@ section#reviews {
       font-size: var(--fs-body-m);
       font-weight: var(--fw-semi);
       line-height: 1.3;
-      padding: 1rem;
+      padding: 1rem 1.5rem;
       cursor: pointer;
       user-select: none;
       transition: var(--transition-default);
@@ -911,7 +913,7 @@ section#reviews {
     }
 
     p {
-      padding-inline: 1rem;
+      padding-inline: 1.5rem;
       font-size: var(--fs-body-s);
       line-height: 1.6;
       &:last-child {
@@ -973,9 +975,15 @@ section#reviews {
   }
 
   .contact-card {
-    padding: 1.5em;
+    padding: 1.5em 1.5em 2em;
     border: 1px solid var(--color-gray-300);
     border-radius: 8px;
+
+    a {
+      font-size: var(--fs-body-s);
+      line-height: 1.6;
+      font-weight: var(--fw-semi);
+    }
   }
 
   .fa-comment-dots {
@@ -1040,9 +1048,9 @@ section#reviews {
 
       input {
         font-size: 1rem;
-        padding-left: 2.25rem;
+        padding-left: 2.75rem;
         /* Subtract padding from width, else it causes grid to overflow */
-        width: calc(100% - 2.25rem);
+        width: calc(100% - 2.75rem);
         border-radius: 8px 0 0 8px;
         border: 1px solid var(--color-gray-400);
         color: var(--color-gray-500);
@@ -1206,9 +1214,15 @@ section#reviews {
   /* FAQ-Contact section */
   .faq-contact-container {
     .header {
+      justify-self: center;
+      width: 60%;
+
       h2 {
         font-size: var(--fs-h2);
         line-height: 1.3;
+      }
+      p {
+        margin-top: 2rem;
       }
     }
       
@@ -1219,6 +1233,11 @@ section#reviews {
       details {
         box-shadow: 0px 2px 5px var(--color-faqoutline);
         border-radius: 8px;
+
+        p {
+          margin-top: 0;
+        }
+
         /* Apply margin-top to all details-elements except first one */
         &:not(:first-child) {
           margin-top: 1rem;
@@ -1238,6 +1257,7 @@ section#reviews {
     }
 
     .subscribe {
+      margin-top: 2rem;
       padding: 3rem 1rem;
       flex-direction: row;
       .cta, .email-form {
