--- a/styles/styles.css
+++ b/styles/styles.css
@@ -235,6 +235,23 @@ header#nav {
   /* Make sure burger-menu is above everything else */
   z-index: 1000;
   transition: .5s ease;
+
+  .jump-to-main {
+    display: inline-block;
+    padding: 1rem;
+    background-color: var(--color-bg);
+    border: 1px solid var(--color-primary);
+    border-radius: 0 1rem 1rem 0;
+    position: absolute;
+    left: -100vw;
+    top: 5rem;
+
+    transition: var(--transition-default);
+
+    &:focus {
+      left: 0;
+    }
+  }
   
   .navbar-links {
     margin-left: 3rem;
