Set display:none on burger menu in desktop to have it removed from accessibility tree

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1311,6 +1311,7 @@ section#reviews {
     .burger-menu {
       grid-template-rows: 0fr !important;
       box-shadow: unset !important;
+      display: none !important;
     }
   }
 
