--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@
   --color-bg-white: var(--color-white);
   --color-bg-dark: var(--color-gray-900);
   --color-paragraph-whitebg: var(--color-gray-700);
-  --color-paragraph-darkbg: var(--color-gray-500);
+  --color-paragraph-darkbg: rgba(255, 255, 255, 70%);
   --color-heading-darkbg: var(--color-white);
   --color-heading-whitebg: var(--color-gray-900);
   --color-navlink-whitebg: var(--color-gray-800);
@@ -138,6 +138,10 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--color-heading);
   font-weight: var(--fw-extra);
   line-height: 1.3;
+}
+
+p, span {
+  color: var(--color-paragraph);
 }
 
 a {
@@ -385,6 +389,9 @@ header#nav {
 
   .btn-signin {
     margin-left: 2rem;
+    span {
+      color: white;
+    }
   }
 
   .btn-burger {
@@ -450,7 +457,6 @@ section#hero {
     margin-top: 2rem;
   }
   .pitch {
-    color: var(--color-paragraph);
     font-size: var(--fs-body-l);
     line-height: 1.6;
   }
@@ -488,7 +494,6 @@ section#hero {
   .discover-more {
     display: flex;
     align-items: center;
-    color: var(--color-paragraph);
     font-size: var(--fs-body-s);
     margin-top: 2.5rem;
     margin-bottom: 2rem;
@@ -584,7 +589,6 @@ section#hero {
     margin-top: 1.5rem;
     font-size: var(--fs-body-l);
     line-height: 1.6;
-    color: var(--color-paragraph);
   }
 
   /* Hide on mobile */
@@ -623,7 +627,6 @@ section#hero {
     .cardtext {
       p {
         margin-top: 1rem;
-        color: var(--color-paragraph);
       }
       h3 {
         font-size: var(--fs-h5);
@@ -673,7 +676,6 @@ section#how {
       width: 85%;
     }
     p {
-      color: var(--color-paragraph);
       font-size: var(--fs-body-m);
       margin-top: 1rem;
       margin-bottom: 4rem;
@@ -703,7 +705,7 @@ section#payment {
     line-height: 1.3;
   }
 
-  li, p {
+  li {
     color: var(--color-paragraph);
   }
 
@@ -836,7 +838,6 @@ section#reviews {
       margin-bottom: 1rem;
     }
     p {
-      color: var(--color-paragraph);
       font-size: var(--fs-body-l);
     }
   }
@@ -883,7 +884,6 @@ section#reviews {
     margin-top: 1rem;
     font-size: var(--fs-body-l);
     line-height: 1.6;
-    color: var(--color-paragraph);
   }
     
   .faq-accordion {
