--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1077,12 +1077,15 @@ section#reviews {
 
       input {
         font-size: 1rem;
-        padding-left: 2.75rem;
+        padding: 0 1rem 0 2.75rem;
         /* Subtract padding from width, else it causes grid to overflow */
         width: calc(100% - 2.75rem);
         border-radius: 8px 0 0 8px;
         border: 1px solid var(--color-gray-400);
-        color: var(--color-gray-500);
+
+        &::placeholder {
+          color: var(--color-gray-500);
+        }
       }
 
       .mail-icon {
@@ -1106,19 +1109,19 @@ section#reviews {
           /* FAQ-contact end */
           /* Footer start */
 
-  .footer {
-    padding: 1.5rem 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: var(--fs-body-s);
-    line-height: 1.6;
+.footer {
+  padding: 1.5rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: var(--fs-body-s);
+  line-height: 1.6;
 
-    span {
-      color: var(--color-gray-600);
-    }
+  span {
+    color: var(--color-gray-600);
   }
+}
 
           /* Footer end */
 
