--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1083,6 +1083,10 @@ section#reviews {
         border-radius: 8px 0 0 8px;
         border: 1px solid var(--color-gray-400);
 
+        &:focus {
+          outline: none;
+        }
+
         &::placeholder {
           color: var(--color-gray-500);
         }
