Add color variable to email input field to make text visible in darkmode

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1084,6 +1084,7 @@ section#reviews {
         width: calc(100% - 2.75rem);
         border-radius: 8px 0 0 8px;
         border: 1px solid var(--color-gray-400);
+        color: var(--color-paragraph);
 
         &:focus {
           outline: none;
